--- a/frontend/app/views/classifications/show.html.erb
+++ b/frontend/app/views/classifications/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <%= render :partial => "shared/tree", :locals => {:read_only => true} %>
+    <%= render :partial => "shared/tree", :locals => {:root_record => @classification, :read_only => true} %>
   </div>
 </div>
 
