--- a/frontend/app/views/digital_objects/edit.html.erb
+++ b/frontend/app/views/digital_objects/edit.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <%= render :partial => "shared/tree" %>
+    <%= render :partial => "shared/tree", :locals => {:root_record => @digital_object} %>
   </div>
 </div>
 
