--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -68,7 +68,7 @@ $(function() {
               value: "true",
               required: false,
               type: "text"
-            })
+            });
           }
         },
         success: function(response, status, xhr) {
@@ -147,7 +147,7 @@ $(function() {
             $(document).trigger("loadedtreenode.aspace", [$container]);
           },
           error: function(obj, errorText, errorDesc) {
-            $container.html("<div class='alert alert-error'><p>An error occurred loading this form.</p><pre>"+errorDesc+"</pre></div>")
+            $container.html("<div class='alert alert-error'><p>An error occurred loading this form.</p><pre>"+errorDesc+"</pre></div>");
           }
         });
 
@@ -179,7 +179,7 @@ $(function() {
             $("form", $container).triggerHandler("formchanged.aspace");
           },
           error: function() {
-            $container.html("<div class='alert alert-error'><p>An error occurred loading this form.</p><pre>"+errorDesc+"</pre></div>")
+            $container.html("<div class='alert alert-error'><p>An error occurred loading this form.</p><pre>"+errorDesc+"</pre></div>");
             console.log("ERROR! $('.archives-tree-container').on('click', '.add-child')");
           }
         });
@@ -190,7 +190,7 @@ $(function() {
             initForm(html);
           },
           error: function(obj, errorText, errorDesc) {
-            $container.html("<div class='alert alert-error'><p>An error occurred loading this record.</p><pre>"+errorDesc+"</pre></div>")
+            $container.html("<div class='alert alert-error'><p>An error occurred loading this record.</p><pre>"+errorDesc+"</pre></div>");
           }
         });
       }
@@ -222,7 +222,7 @@ $(function() {
       // render tree toolbar
       $("#archives_tree_toolbar").html(AS.renderTemplate("tree_toolbar_template"));
       renderTreeNodeNavigation();
-      if (config.read_only != true && nodeEl.attr("id") != "new") {
+      if (config.read_only !== true && nodeEl.attr("id") != "new") {
         var data_for_toolbar = {
           config: config,
           rules: config.rules[nodeEl.attr("rel")],
@@ -255,7 +255,7 @@ $(function() {
         $('.dropdown-submenu > a', "#archives_tree_toolbar").on("keyup", function(event) {
           // right arrow focuses submenu
           if (event.keyCode === 39) {
-            $('.dropdown-menu a:first', $(this).parent()).focus()
+            $('.dropdown-menu a:first', $(this).parent()).focus();
           }
         });
         $('.dropdown-submenu > .dropdown-menu > li > a', "#archives_tree_toolbar").on("keyup", function() {
@@ -300,7 +300,7 @@ $(function() {
         return;
       }
 
-      if (!location.hash || !location.hash.indexOf("tree::") != 0) {
+      if (!location.hash || location.hash.indexOf("tree::") === -1) {
         return;
       }
 
@@ -336,7 +336,7 @@ $(function() {
     var resizeArchivesTree = function() {
       var height = $("#archives_tree").parent().height() - $("#archives_tree_toolbar").outerHeight() - 21;
       $("#archives_tree").height(height);
-    }
+    };
 
 
     var enableDisableToolbarActions = function() {
@@ -356,7 +356,7 @@ $(function() {
           return;
         }
 
-        addnewNode($selected, $(this).attr("rel"), config.rules[getPrimarySelectedNode().attr("rel")]["can_add_child"]);
+        addnewNode($selected, $(this).attr("rel"), config.rules[getPrimarySelectedNode().attr("rel")].can_add_child);
       });
 
       $(".archives-tree-container").on("click", ".add-sibling", function() {
@@ -365,7 +365,7 @@ $(function() {
           return;
         }
 
-        addnewNode($selected.parents("li:first"), $(this).attr("rel"), config.rules[$selected.parents("li:first").attr("rel")]["can_add_child"]);
+        addnewNode($selected.parents("li:first"), $(this).attr("rel"), config.rules[$selected.parents("li:first").attr("rel")].can_add_child);
       });
 
       $container.on("click", ".btn-cancel", function(event) {
@@ -424,9 +424,9 @@ $(function() {
       // disable the move-node-up and move-node-down actions when multiple nodes are selected
       // (as behaviour of such actions is unclear when nodes are selected across branches)
       $tree.on("treemultipleselected.aspace", function() {
-        enableDisableToolbarActions()
+        enableDisableToolbarActions();
       }).on("treesingleselected.aspace", function() {
-        enableDisableToolbarActions()
+        enableDisableToolbarActions();
       });
 
       // TRANSFER STUFF
@@ -451,7 +451,7 @@ $(function() {
           });
           setTimeout(function() {
             $("#token-input-transfer_ref_", ".archives-tree-container").focus();
-          })
+          });
         }
       });
       $(".archives-tree-container").on("click", ".tree-transfer-form :input", function(event) {
@@ -536,7 +536,7 @@ $(function() {
     var moveNodes = function(jstreeMoveData) {
       var targetNodeEl = $(jstreeMoveData.rslt.cr[0]);
       var data_for_post = {
-        children: $.makeArray(jstreeMoveData.rslt.o.map(function(i, moved) {return $(moved).data("uri")})),
+        children: $.makeArray(jstreeMoveData.rslt.o.map(function(i, moved) {return $(moved).data("uri");})),
         index: jstreeMoveData.rslt.cp
       };
 
@@ -639,18 +639,20 @@ $(function() {
           rel: node_json.node_type,
           "data-id": node_json.id,
           "data-uri": node_json.record_uri,
-          class: node_json.node_type
+          "class": node_json.node_type
         }
       };
 
       if ($.inArray(node_id, initiallyOpenedNodes()) >= 0) {
-        result["state"] = "open";
+        result.state = "open";
       }
 
       if (node_json.hasOwnProperty("children") && node_json.children.length > 0) {
-        result["children"] = $.makeArray(node_json.children).map(function(child_id) {return AS.formatJSONForJSTree(AS.tree_data[child_id])})
+        result.children = $.makeArray(node_json.children).map(function(child_id) {
+          return AS.formatJSONForJSTree(AS.tree_data[child_id]);
+        });
       } else if (node_json.has_children) {
-        result["children"] = [];
+        result.children = [];
       }
 
       return result;
@@ -710,7 +712,7 @@ $(function() {
                   $tree.data("loading-node", node.attr("id"));
                   return {
                     node_uri: node.data("uri")
-                  }
+                  };
                 }
               }
             }
@@ -847,7 +849,7 @@ $(function() {
           $tree.trigger("treesingleselected.aspace");
         }
       }).bind("deselect_node.jstree", function (event, data) {
-        var $node = $(data.rslt.obj)
+        var $node = $(data.rslt.obj);
         if ($node.hasClass("primary-selected")) {
           // we don't want to allow deselection of the primary selected node
           $tree.jstree("select_node", $node);
@@ -874,7 +876,7 @@ $(function() {
 
           nodeEl = $("#"+nodeId, $tree);
 
-          $("> a", nodeEl).html(AS.renderTemplate("tree_node_"+data['node_type']+"_template", {node: data})).prepend("<ins class='jstree-icon'>&nbsp;</ins>");
+          $("> a", nodeEl).html(AS.renderTemplate("tree_node_"+data.node_type+"_template", {node: data})).prepend("<ins class='jstree-icon'>&nbsp;</ins>");
 
           nodeEl.removeClass("new").addClass(currentNodeType).addClass("selected").addClass("primary-selected").attr("rel", currentNodeType).data("id", data.id).data("uri", data.uri);
           var newHash = "#tree::"+nodeId;
@@ -888,7 +890,7 @@ $(function() {
           // rename the existing node
 
           var nodeEl = $("#" + nodeId, $tree);
-          $("> a > .tree-node-text", nodeEl).replaceWith(AS.renderTemplate("tree_node_"+data['node_type']+"_template", {node: data}));
+          $("> a > .tree-node-text", nodeEl).replaceWith(AS.renderTemplate("tree_node_"+data.node_type+"_template", {node: data}));
         }
       }).on("after_open.jstree", function() {
         loadTreeActionsForNode(getPrimarySelectedNode());
@@ -907,7 +909,7 @@ $(function() {
     addTreeEventBindings();
 
     AS.refreshTreeNode = function(data) {
-      $tree.triggerHandler("refreshtreenode.aspace", [data])
+      $tree.triggerHandler("refreshtreenode.aspace", [data]);
     };
 
   }
