Make bioghist note option in resources create a note_bioghist note

--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -507,6 +507,10 @@ pre {
     background-color: #FCFCFC;
   }
 
+  .note_outline ul {
+    list-style: disc;
+  }
+
   .note_orderedlist {
     margin: 10px 0;
 
