--- a/public/app/views/records/_notes.html.erb
+++ b/public/app/views/records/_notes.html.erb
@@ -20,11 +20,29 @@
 <% note_renderers['note_orderedlist'] = lambda do | note | %>
   <div class="enumeration-<%= note['enumeration'] %>">
     <ol>
-      <% note['items'].each do |item| %>
+      <% Array(note['items']).each do |item| %>
         <li><%= item %></li>
       <% end %>
     </ol>
   </div>
+<% end %>
+
+<% note_renderers['note_outline_level'] = lambda do | note | %>
+  <ul class="note_outline_level">
+  <% Array(note['items']).each do |item| %>
+    <% if item.kind_of? String %>
+      <li><%= item %></li>
+    <% else %>
+      <% note_renderers['note_outline_level'].call(item) %>
+    <% end %>
+  <% end %>
+  </ul>
+<% end %>
+
+<% note_renderers['note_outline'] = lambda do | note | %>
+  <% Array(note['levels']).each do |outline_level| %>
+    <% note_renderers['note_outline_level'].call(outline_level) %>
+  <% end %>
 <% end %>
 
 <% note_renderers['note_singlepart'] = lambda do | note | %>
@@ -38,9 +56,17 @@
   <% end %>
 <% end %>
 
+<% note_renderers['note_bioghist'] = lambda do | note | %>
+  <% Array(note['subnotes']).each do |subnote| %>
+    <div class="<%= subnote['jsonmodel_type'] %>">
+      <% render_note.call(subnote) %>
+    </div>
+  <% end %>
+<% end %>
+
 <% note_renderers['note_bibliography'] = lambda do | note | %>
   <ul>
-    <% note['items'].each do |item| %>
+    <% Array(note['items']).each do |item| %>
       <li><%= item %></li>
     <% end %>
   </ul>
@@ -48,7 +74,7 @@
 
 <% note_renderers['note_index'] = lambda do | note | %>
   <dl>
-    <% note['items'].each do |index_item| %>
+    <% Array(note['items']).each do |index_item| %>
       <dt><%= index_item['value'] %></dt>
       <dd><%= index_item['reference_text'] %></dd>
     <% end %>
@@ -57,7 +83,7 @@
 
 <% note_renderers['note_chronology'] = lambda do | note | %>
   <dl>
-    <% note['items'].each do |item| %>
+    <% Array(note['items']).each do |item| %>
       <dt><%= item['event_date'] %></dt>
       <% item['events'].each do | event | %>
         <dd><%= event %></dd>
@@ -68,11 +94,14 @@
 
 <% note_renderers['note_definedlist'] = lambda do | note | %>
   <dl>
-    <% note['items'].each do |item| %>
+    <% Array(note['items']).each do |item| %>
       <dt><%= item['label'] %></dt>
       <dd><%= item['value'] %></dd>
     <% end %>
   </dl>
+<% end %>
+
+<% note_renderers['note_citation'] = lambda do | note | %>
 <% end %>
 
 <% note_renderers['note_text'] = lambda do | note | %>
