Only show published notes in the public app

--- a/public/app/views/records/_archival_object.html.erb
+++ b/public/app/views/records/_archival_object.html.erb
@@ -15,7 +15,7 @@
   <%= render :partial => "extents", :locals => {:extents => archival_object['extents']} %>
   <%= render :partial => "agents", :locals => {:linked_agents => archival_object.published_agents} %>
   <%= render :partial => "subjects", :locals => {:subjects => archival_object['subjects']} %>
-  <%= render :partial => "notes", :locals => {:notes => archival_object['notes']} %>
+  <%= render :partial => "notes", :locals => {:notes => archival_object.published_notes} %>
   <%= render :partial => "external_documents", :locals => {:external_documents => archival_object.published_external_documents} %>
   <%= render :partial => "instances", :locals => {:digital_objects => archival_object.digital_objects} %>
 
