--- a/public/app/views/records/archival_object.html.erb
+++ b/public/app/views/records/archival_object.html.erb
@@ -25,7 +25,7 @@
                      {:property => 'extents', :subrecord_type => 'extent', :anchor => 'extents'},
                      {:property => 'published_agents', :subrecord_type => 'agent', :anchor => 'linked_agents'},
                      {:property => 'subjects', :subrecord_type => 'subject', :anchor => 'subjects'},
-                     {:property => 'notes', :subrecord_type => 'note', :anchor => 'notes'},
+                     {:property => 'published_notes', :subrecord_type => 'note', :anchor => 'notes'},
                      {:property => 'published_external_documents', :subrecord_type => 'external_document', :anchor => 'external_documents'},
                      {:property => 'digital_objects', :subrecord_type => 'digital_object', :anchor => 'external_documents'},
                    ]
