--- a/public/app/views/records/resource.html.erb
+++ b/public/app/views/records/resource.html.erb
@@ -24,7 +24,7 @@
                      {:property => 'extents', :subrecord_type => 'extent', :anchor => 'extents'},
                      {:property => 'published_agents', :subrecord_type => 'agent', :anchor => 'linked_agents'},
                      {:property => 'subjects', :subrecord_type => 'subject', :anchor => 'subjects'},
-                     {:property => 'notes', :subrecord_type => 'note', :anchor => 'notes'},
+                     {:property => 'published_notes', :subrecord_type => 'note', :anchor => 'notes'},
                      {:property => 'published_external_documents', :subrecord_type => 'external_document', :anchor => 'external_documents'},
                      {:property => 'published_related_accessions', :subrecord_type => 'accession', :anchor => 'accessions'},
                      {:property => 'digital_objects', :subrecord_type => 'digital_object', :anchor => 'external_documents'},
@@ -62,7 +62,7 @@
         <%= render :partial => "extents", :locals => {:extents => @resource['extents']} %>
         <%= render :partial => "agents", :locals => {:linked_agents => @resource.published_agents} %>
         <%= render :partial => "subjects", :locals => {:subjects => @resource['subjects']} %>
-        <%= render :partial => "notes", :locals => {:notes => @resource['notes']} %>
+        <%= render :partial => "notes", :locals => {:notes => @resource.published_notes} %>
         <%= render :partial => "external_documents", :locals => {:external_documents => @resource.published_external_documents} %>
         <%= render :partial => "accessions", :locals => {:accessions => @resource.published_related_accessions} %>
         <%= render :partial => "instances", :locals => {:digital_objects => @resource.digital_objects} %>
