--- a/public/app/views/records/archival_object.html.erb
+++ b/public/app/views/records/archival_object.html.erb
@@ -27,7 +27,7 @@
                      {:property => 'subjects', :subrecord_type => 'subject', :anchor => 'subjects'},
                      {:property => 'published_notes', :subrecord_type => 'note', :anchor => 'notes'},
                      {:property => 'published_external_documents', :subrecord_type => 'external_document', :anchor => 'external_documents'},
-                     {:property => 'digital_objects', :subrecord_type => 'digital_object', :anchor => 'external_documents'},
+                     {:property => 'instances', :subrecord_type => 'instance', :anchor => 'instances'},
                    ]
                  })
        %>
