--- a/public/app/views/records/accession.html.erb
+++ b/public/app/views/records/accession.html.erb
@@ -25,7 +25,7 @@
                      {:property => 'published_related_resources', :subrecord_type => 'resource', :anchor => 'resources'},
                      {:property => 'subjects', :subrecord_type => 'subject', :anchor => 'subjects'},
                      {:property => 'published_external_documents', :subrecord_type => 'external_document', :anchor => 'external_documents'},
-                     {:property => 'digital_objects', :subrecord_type => 'digital_object', :anchor => 'external_documents'},
+                     {:property => 'instances', :subrecord_type => 'instance', :anchor => 'instances'},
                    ]
                  })
        %>
@@ -59,7 +59,11 @@
         <%= render :partial => "resources", :locals => {:resources => @accession.published_related_resources} %>
         <%= render :partial => "subjects", :locals => {:subjects => @accession['subjects']} %>
         <%= render :partial => "external_documents", :locals => {:external_documents => @accession.published_external_documents} %>
-        <%= render :partial => "instances", :locals => {:digital_objects => @accession.digital_objects} %>
+        <%= render :partial => "instances", :locals => {:instances => @accession.instances} %>
+        <%= render :partial => "components", :locals => {
+              :record_type => "resource",
+              :show_full_component => @show_components
+            } %>
       </fieldset>
 
 
