--- a/public/app/views/records/resource.html.erb
+++ b/public/app/views/records/resource.html.erb
@@ -27,7 +27,7 @@
                      {:property => 'published_notes', :subrecord_type => 'note', :anchor => 'notes'},
                      {:property => 'published_external_documents', :subrecord_type => 'external_document', :anchor => 'external_documents'},
                      {:property => 'published_related_accessions', :subrecord_type => 'accession', :anchor => 'accessions'},
-                     {:property => 'digital_objects', :subrecord_type => 'digital_object', :anchor => 'external_documents'},
+                     {:property => 'instances', :subrecord_type => 'instance', :anchor => 'instances'},
                    ]
                  })
        %>
@@ -65,7 +65,7 @@
         <%= render :partial => "notes", :locals => {:notes => @resource.published_notes} %>
         <%= render :partial => "external_documents", :locals => {:external_documents => @resource.published_external_documents} %>
         <%= render :partial => "accessions", :locals => {:accessions => @resource.published_related_accessions} %>
-        <%= render :partial => "instances", :locals => {:digital_objects => @resource.digital_objects} %>
+        <%= render :partial => "instances", :locals => {:instances => @resource.instances} %>
         <%= render :partial => "components", :locals => {
               :record_type => "resource",
               :show_full_component => @show_components
