Fix popover/tooltip hide closing parent modal (twitter bootstrap bug); Also replaced ajaxComplete with more targeted events to improve js performance when loading ajax forms;

--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -48,8 +48,8 @@ $(function() {
     });
   };
 
-  $(document).ajaxComplete(function() {
-    $("#resource_form:not(.initialised)").init_resource_form();
+  $(document).bind("loadedrecordform.aspace", function(event, $container) {
+    $("#resource_form:not(.initialised)", $container).init_resource_form();
   });
 
   $("#resource_form:not(.initialised)").init_resource_form();
