--- a/frontend/app/assets/javascripts/merge_dropdown.js.erb
+++ b/frontend/app/assets/javascripts/merge_dropdown.js.erb
@@ -53,9 +53,9 @@ $(function () {
 
 
   if ($('.merge-form').length > 0) {
-    init()
+    init();
   } else {
-    $(document).ajaxComplete(init);
+    $(document).bind("loadedrecordform.aspace", init);
   }
 
 });
