Revert .innerHTML to .html() so inline javascript is executed -- will investigate if inline javascript can be refactored

--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -18,9 +18,7 @@ $(function() {
     };
 
     var initForm = function(html) {
-      // Use innerHTML as benchmarks say this performs
-      // better than .html()
-      $container[0].innerHTML = html;
+      $container.html(html);
 
       var $form = $("form", $container);
 
@@ -144,9 +142,7 @@ $(function() {
           type: 'GET',
           data: params,
           success: function(html) {
-            // Use innerHTML as benchmarks say this performs
-            // better than .html()
-            $container[0].innerHTML = html;
+            $container.html(html);
             AS.resetScrollSpy();
             $(document).trigger("loadedrecordform.aspace", [$container]);
           },
