--- a/frontend/app/views/enumerations/_merge.html.erb
+++ b/frontend/app/views/enumerations/_merge.html.erb
@@ -1,3 +1,4 @@
+# -*- coding: utf-8 -*-
 <%= form_for @enumeration, :as => "enumeration", :url => {:action => :merge, :id => JSONModel(:enumeration).id_for(@enumeration["uri"])}, :html => {:class => 'form-horizontal aspace-record-form', :id => "merge_enumeration"} do |f| %>
   <%= form_context :enumeration, @enumeration do |form| %>
     <div class="modal-header">
@@ -19,14 +20,14 @@
         <div class="control-group required">
           <label class="control-label" for="enum_selector"><%= I18n.t("enumeration.value") %></label>
           <div class="controls label-only">
-            <%= @value %>
+            <%= I18n.t("enumerations.#{@enumeration["name"]}.#{@value}", :default => @value) %>
             <%= form.hidden_input :value, @value %>
           </div>
         </div>
         <div class="control-group required">
           <label class="control-label" for="enum_selector"><%= I18n.t("enumeration.merge_into") %></label>
           <div class="controls">
-            <%= select_tag "merge_into", options_for_select(@enumeration["values"].reject{|v| v === @value}, @merge) %>
+                   <%= select_tag "merge_into", options_for_select(@enumeration["values"].reject{|v| v === @value}.map{|v| [I18n.t("enumerations.#{@enumeration["name"]}.#{v}", :default => v), v]}, @merge) %>
           </div>
         </div>
       </fieldset>
