added support for overriding the heading of the title column in search results and then used it for record types where 'title' wasn't clear (agents, subjects, locations

--- a/frontend/app/views/locations/index.html.erb
+++ b/frontend/app/views/locations/index.html.erb
@@ -1,5 +1,7 @@
 <%= setup_context(:title => I18n.t("location._plural")) %>
 
+<% title_column_header(I18n.t("location._singular")) %>
+
 <div class="row-fluid">
   <div class="span3">
     <%= render :partial => "search/filter" %>
