--- a/frontend/app/views/subjects/index.html.erb
+++ b/frontend/app/views/subjects/index.html.erb
@@ -2,6 +2,7 @@
 
 <%
    @show_multiselect_column = user_can?("delete_subject_record")
+   title_column_header(I18n.t("subject.terms"))
 %>
 
 <div class="row-fluid">
