--- a/frontend/app/views/agents/index.html.erb
+++ b/frontend/app/views/agents/index.html.erb
@@ -1,7 +1,7 @@
 <%= setup_context(:title => I18n.t("agent._plural")) %>
 <%
    @show_multiselect_column = user_can?("delete_agent_record")
-
+   title_column_header(I18n.t("agent.name"))
    add_column(I18n.t("agent_name.authority_id"), proc {|record| record['authority_id']}, :sortable => true, :sort_by => "authority_id")
    add_column(I18n.t("agent_name.source"), proc {|record| I18n.t("enumerations.name_source.#{record['source']}", :default => record['source']) if record['source']}, :sortable => true, :sort_by => "source")
    add_column(I18n.t("agent_name.rules"), proc {|record| I18n.t("enumerations.name_rule.#{record['rules']}", :default => record['rules']) if record['rules']}, :sortable => true, :sort_by => "rules")
