--- a/frontend/app/views/shared/_pagination_summary.html.erb
+++ b/frontend/app/views/shared/_pagination_summary.html.erb
@@ -6,14 +6,14 @@
     <%= I18n.t("search_sorting.sort_by") %>
     <span class="input-append">
       <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        <span class="inset-label"><%= @search_data.sorted_by_label %></span>
+        <span class="inset-label"><%= @search_data.sorted_by_label(title_sort_label) %></span>
         <span class="btn btn-mini last"><span class="caret"></span></span>
       </a>
       <ul class="dropdown-menu pull-right">
         <li><%= link_to I18n.t("search_sorting.relevance"), params_for_search("sort" => "") %></li>
         <% if show_title_column? %>
           <li class="dropdown-submenu pull-left">
-            <%= link_to I18n.t("search_sorting.title_sort"), params_for_search("sort" => @search_data.sort_filter_for("title_sort")) %>
+            <%= link_to title_sort_label, params_for_search("sort" => @search_data.sort_filter_for("title_sort")) %>
             <ul class="dropdown-menu">
               <li><%= link_to I18n.t("search_sorting.asc"), params_for_search("sort" => "title_sort asc") %></li>
               <li><%= link_to I18n.t("search_sorting.desc"), params_for_search("sort" => "title_sort desc") %></li>
